% Check from R:
%  news(db = tools:::.build_news_db_from_package_NEWS_Rd("~/R/Pkgs/robustbase/inst/NEWS.Rd"))
\name{NEWS}
\title{News for \R Package \pkg{robustbase}}
\encoding{UTF-8}

  % --- 1.0-0  once we fix  adjOutlyingness() properly !
  %     =====

\section{CHANGES in robustbase VERSION 0.99-3 (2024-07-08, svn r993)}{
  \subsection{Misc}{
    \itemize{
      \item the same problem (LaTeX no more wanting math in section
      titles), now for \file{lmrob_simulation.Rnw}.

      \item (TODO): more ggplot2 warnings
    }
  }
}

\section{CHANGES in robustbase VERSION 0.99-3 (2024-07-01, svn r992)}{
  \subsection{Misc}{
    \itemize{
      \item Again adapt \file{../vignettes/lmrob_simulation.Rnw} to
      \pkg{ggplot2} changes (\code{ s/ fun.y / fun / }).

      \item \file{tests/subsample.R} now shows "Matrix" info (as that gave
      confusing error during Matrix / R-devel changes).

      \item Latest LaTeX does not like math in \verb{\section{.}}; hence
      replacing \verb{\psi} by \verb{\texorpdfstring{$\psi$}{psi}}.
    }
  }
}

\section{CHANGES in robustbase VERSION 0.99-2 (2024-01-27, svn r989)}{
  \subsection{BUG FIXES}{
    \itemize{
      \item fix thinko bug introduced exact fit checking in 0.99-0; thanks
      to the report by Thomas Mang.
    }
  }
}

\section{CHANGES in robustbase VERSION 0.99-1 (2023-11-28, svn r988)}{
  \subsection{Misc}{
    \itemize{
      \item document the \code{...} argument(s) of \code{nlrob.control()}.
      \item \file{DESCRIPTION}: more URLSs.
      \item \file{*.Rd} tweaks; avoiding other \verb{NOTE}s.
      \item \file{src/lmrob.c,mc.c,monitor.c}: format \%lld etc
    }
  }
}

\section{CHANGES in robustbase VERSION 0.99-0 (2023-06-12, svn r928)}{
  \subsection{NEW FEATURES}{
    \itemize{
      \item In case it finds an \emph{exact fit}, i.e., \eqn{k > n/2}
      residuals are (practically) zero, \code{lmrob.S()} now returns that,
      \code{scale = 0}, and robustness weights \code{weights(.,	"robustness")}