@@ -4,6 +4,8 @@ library(robustbase)
 source(system.file("xtraR/plot-psiFun.R", package = "robustbase", mustWork=TRUE))
 source(system.file("xtraR/test-tools.R",  package = "robustbase")) # assert.EQ
 
+(doExtras <- robustbase:::doExtras())
+
 ### (1) Test the functions themselves --------------------------------
 if(!dev.interactive(orNone=TRUE)) pdf("rob-psifns.pdf")
 
@@ -100,6 +102,28 @@ for(c.psi in c.psi.list) {
     cat("------------------------\n\n")
 }
 
+## Demonstrate lmrob.tau.fast.coefs() computations:
+## a) values from the if(fast && ..)  switch(control$psi, .....) in lmrob.tau() { --> ../R/lmrob.MM.R }
+lmrob.tauFC <- list(optimal = list(c = 1.060158, tfc = c(tfact = 0.94735878, tcorr = -0.09444537)),
+                    bisquare= list(c = 4.685061, tfc = c(tfact = 0.9473684 , tcorr = -0.0900833 )),
+                    welsh   = list(c = 2.11,     tfc = c(tfact = 0.94732953, tcorr = -0.07569506)),
+                    ggw_1   = list(c = c(-.5, 1.0, 0.95, NA), tfc = c(tfact = 0.9473787, tcorr = -0.1143846)),
+                    ggw_2   = list(c = c(-.5, 1.5, 0.95, NA), tfc = c(tfact = 0.94741036, tcorr = -0.08424648)),
+                    lqq     = list(c = c(-.5, 1.5, 0.95, NA), tfc = c(tfact = 0.94736359, tcorr = -0.08594805)),
+                    hampel  = list(c = c(1.35241275, 3.15562975, 7.212868),
+                                   tfc = c(tfact = 0.94739770, tcorr = -0.04103958)))
+lmrob.tau.fast.coefs <- robustbase:::lmrob.tau.fast.coefs
+rr <- sapply(names(lmrob.tauFC), function(nm) { L <- lmrob.tauFC[[nm]]
+    tfc <- lmrob.tau.fast.coefs(cc = L$c, psi = sub("_[0-9]*$", '', nm))
+    ## workaround (for older robustbase:) names(tfc)[2] <- "tcorr"
+    Dif <- all.equal(L$tfc, tfc, tolerance = 0)
+    cat(nm,": 'true' vs lmrob.tau.fast.coefs()-computed: ", Dif, "\n")
+    stopifnot(all.equal(L$tfc, tfc, tol = 4e-5)) # default tol 1.49e-8  is way too small
+    if(doExtras) { ## "slow coefs"
+    }
+    c(tfc, rel.diff = as.numeric(sub(".*:", '', Dif)))
+    })
+t(rr)
 
 ## Nice plots -- and check derivatives ----
 
